--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             <a href="./index.html" class="navbar-link">Home.</a>
           </li>
           <li>
-            <a href="./upcoming.html" class="navbar-link">Up-coming Events.</a>
+            <a href="./about.html" class="navbar-link">About us.</a>
           </li>
           <li>
-            <a href="./past.html" class="navbar-link">Archive.</a>
+            <a href="./up coming.html" class="navbar-link">Up-coming Events.</a>
           </li>
           <li>
-            <a href="./about.html" class="navbar-link">About Us.</a>
+            <a href="./Contact.html" class="navbar-link">Contact Us.</a>
           </li>
         </ul>
       </nav>
