--- a/index.html
+++ b/index.html
@@ -82,7 +82,39 @@
   -->
   <script src="./settings/JS/script.js"></script>
 </body>
+<!-- main-content -->
+    <div class="main-banner" id="home">
+        <!--/banner-->
+        <div class="banner-info">
+            <div class="lavi-logo text-center">
+                <h1> <a href="index.html">Photon SCNSM</a></h1>
+            </div>
+            <div class="middile-inner-con">
+                <div class="tab-main mx-auto">
 
+                    <input id="tab1" type="radio" name="tabs" class="vv-sm" checked>
+                    <label for="tab1"><span class="fa fa-home" aria-hidden="true"></span>Home</label>
+
+                    <input id="tab2" type="radio" class="vv-sm" name="tabs">
+                    <label for="tab2"><span class="fa fa-user" aria-hidden="true"></span> About us</label>
+
+                    <input id="tab6" type="radio" class="vv-sm" name="tabs">
+                    <label for="tab6"><span class="fa fa-envelope" aria-hidden="true"></span> Contact us</label>
+                    <section id="content1" class="inner-vv-wrap">
+                      
+			</p>
+			<br>
+			<p>My social media</p>
+			<p>
+				<a target="_blank" href="https://www.facebook.com/Photon.SCNSM" rel="noopener noreferrer"><span class="fa fa-facebook"></span></a>
+			</p>
+                      </section>
+                    <section id="content2" class="inner-vv-wrap">
+                        <h3 class="head-vl">What I do</h3>
+                        <div style="text-align: justify">
+                            <p>Exploring Science & Metaphysics. Bridging Experts & Enthusiasts.
+                                </p>
+			</div>
 
 <main>
 </main>
