--- a/index.html
+++ b/index.html
@@ -97,9 +97,12 @@
 
                     <input id="tab2" type="radio" class="vv-sm" name="tabs">
                     <label for="tab2"><span class="fa fa-user" aria-hidden="true"></span> About us</label>
+			
+			<input id="tab3" type="radio" class="vv-sm" name="tabs">
+                    <label for="tab3"><span class="fa fa-user" aria-hidden="true"></span> Up coming events</label>
 
-                    <input id="tab6" type="radio" class="vv-sm" name="tabs">
-                    <label for="tab6"><span class="fa fa-envelope" aria-hidden="true"></span> Contact us</label>
+                    <input id="tab4" type="radio" class="vv-sm" name="tabs">
+                    <label for="tab4"><span class="fa fa-envelope" aria-hidden="true"></span> Contact us</label>
                     <section id="content1" class="inner-vv-wrap">
                       
 			</p>
@@ -109,12 +112,35 @@
 				<a target="_blank" href="https://www.facebook.com/Photon.SCNSM" rel="noopener noreferrer"><span class="fa fa-facebook"></span></a>
 			</p>
                       </section>
-                    <section id="content2" class="inner-vv-wrap">
+                    <section id="tab1" class="inner-vv-wrap">
                         <h3 class="head-vl">What I do</h3>
                         <div style="text-align: justify">
-                            <p>Exploring Science & Metaphysics. Bridging Experts & Enthusiasts.
-                                </p>
+                            <p>Exploring Science & Metaphysics. Bridging Experts & Enthusiasts.    </p>
 			</div>
+			     </section>
+                    <section id="tab2" class="inner-vv-wrap">
+                        <h3 class="head-vl">About us</h3>
+                        <p><strong>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics!**
+				**مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا!**
+				Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
+				Our mission is to bridge the gap between experts in these fields, passionate individuals, and aspiring students. Through a diverse range of activities and specialized training courses, we aim to facilitate knowledge sharing, ignite curiosity, and inspire the next generation of scientific pioneers.
+				Join us on this fascinating journey of discovery, exploration, and enlightenment. Together, we can unravel the mysteries of the cosmos and expand the horizons of human understanding.
+				Stay connected and informed by following our page!></p>
+                      
+                    </section>
+			 </section>
+                    <section id="tab3" class="inner-vv-wrap">
+                        <h3 class="head-vl"> Up coming events</h3>
+                        <p>محاضرة رقم (7)
+لا يخفى على الجميع أهمية القياس و المعايرة في حياتنا اليومية، فضلاً عن أهمية القياس في مجال العلوم الطبيعية، سواءً كان على المستوى المجهري او الأشياء المنظورة بالعين المجردة.
+سنكون على موعد مع إحدى الخبيرات في مجال الميترولوجي لإستكشاف علم القياس في محاضرة عامة يوم السبت المقبل ان شاء الله.
+تفاصيل اوفى في البوستر المرفق ادناه   </p>
+                    </section>
+			 </section>
+                    <section id="tab4" class="inner-vv-wrap">
+                        <h3 class="head-vl"> Get In Touch</h3>
+                        <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
+                    </section>
 
 <main>
 </main>
