--- a/index.html
+++ b/index.html
@@ -55,33 +55,41 @@
         <span class="two"></span>
         <span class="three"></span>
       </button>
-
-      <!--tabs-->
-      <nav class="navbar" data-navbar>
-        <ul class="navbar-list">
-          <li>
-            <a href="./index.html" class="navbar-link">Home.</a>
-          </li>
-          <li>
-            <a href="./about.html" class="navbar-link">About us.</a>
-          </li>
-          <li>
-            <a href="./up coming.html" class="navbar-link">Up-coming Events.</a>
-          </li>
-          <li>
-            <a href="./Contact.html" class="navbar-link">Contact Us.</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    </div>
-  </header>
-
   <!--
     - Js link
   -->
   <script src="./settings/JS/script.js"></script>
 </body>
+	 <!-- main-content -->
+    <div class="main-banner" id="home">
+        <!--/banner-->
+        <div class="banner-info">
+            <div class="lavi-logo text-center">
+                <h1> <a href="index.html">Alaa Mohammed Idris Bakhit</a></h1>
+            </div>
+            <div class="middile-inner-con">
+                <div class="tab-main mx-auto">
+
+                    <input id="tab1" type="radio" name="tabs" class="vv-sm" checked>
+                    <label for="tab1"><a href="./index.html" class="navbar-link">Home.</label>
+
+                    <input id="tab2" type="radio" class="vv-sm" name="tabs">
+                    <label for="tab2"> <a href="./about.html" class="navbar-link">About us.</label>
+
+                    <input id="tab3" type="radio" class="vv-sm" name="tabs">
+                    <label for="tab3"><a href="./up coming.html" class="navbar-link">Up-coming Events.</label>
+
+                    <input id="tab4" type="radio" class="vv-sm" name="tabs">
+                    <label for="tab4"> <a href="./Contact.html" class="navbar-link">Contact Us.</a>Contact</label>
+                    <section id="content1" class="inner-vv-wrap">
+                        <img src="images/admin.jpg" class="admin img-fluid" alt="mobile-image">
+                        <h4>The Photon Scientific Centre for Natural Sciences and Metaphysics</h4>
+			<p>
+	                        <video class="inner-vv-wrap"  controls>
+        	                    <source src="video/video.mp4" type="video/mp4">
+                	           About us
+                        	</video> 
+			</p>
                       </section>
                     <section id="tab1" class="inner-vv-wrap">
                         <h3 class="head-vl">What I do</h3>
