--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!--
     - Title
   -->
-  <title>Photon - Sudanese Physics Community</title>
+  <title> The Photon Scientific Centre for Natural Sciences and Metaphysics</title>
 
   <!-- 
     - css link
@@ -92,7 +92,7 @@
 			</p>
                       </section>
                     <section id="tab1" class="inner-vv-wrap">
-                        <h3 class="head-vl">What I do</h3>
+                        <h3 class="head-vl">About us</h3>
                         <div style="text-align: justify">
                             <p>Exploring Science & Metaphysics. Bridging Experts & Enthusiasts.    </p>
 			</div>
