--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!--/banner-->
         <div class="banner-info">
             <div class="lavi-logo text-center">
-                <h1> <a href="index.html">Alaa Mohammed Idris Bakhit</a></h1>
+                <h1> <a href="index.html">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
             </div>
             <div class="middile-inner-con">
                 <div class="tab-main mx-auto">
@@ -82,7 +82,7 @@
                     <input id="tab4" type="radio" class="vv-sm" name="tabs">
                     <label for="tab4"> <a href="./Contact.html" class="navbar-link">Contact Us.</a>Contact</label>
                     <section id="content1" class="inner-vv-wrap">
-                        <img src="images/admin.jpg" class="admin img-fluid" alt="mobile-image">
+                        <img src="Photon.jpg" class="admin img-fluid" alt="Photon">
                         <h4>The Photon Scientific Centre for Natural Sciences and Metaphysics</h4>
 			<p>
 	                        <video class="inner-vv-wrap"  controls>
@@ -91,13 +91,13 @@
                         	</video> 
 			</p>
                       </section>
-                    <section id="tab1" class="inner-vv-wrap">
+                    <section id="tab1" class="vv-sm" >
                         <h3 class="head-vl">About us</h3>
                         <div style="text-align: justify">
                             <p>Exploring Science & Metaphysics. Bridging Experts & Enthusiasts.    </p>
 			</div>
 			     </section>
-                    <section id="tab2" class="inner-vv-wrap">
+                    <section id="tab2" class="vv-sm" >
                         <h3 class="head-vl">About us</h3>
                         <p><strong>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics!**
 				**مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا!**
@@ -108,15 +108,15 @@
                       
                     </section>
 			 </section>
-                    <section id="tab3" class="inner-vv-wrap">
-                        <h3 class="head-vl"> Up coming events</h3>
+                    <section id="tab3" class="vv-sm" >
+                        <h3 class="head-vl"> Upcoming events</h3>
                         <p>محاضرة رقم (7)
 لا يخفى على الجميع أهمية القياس و المعايرة في حياتنا اليومية، فضلاً عن أهمية القياس في مجال العلوم الطبيعية، سواءً كان على المستوى المجهري او الأشياء المنظورة بالعين المجردة.
 سنكون على موعد مع إحدى الخبيرات في مجال الميترولوجي لإستكشاف علم القياس في محاضرة عامة يوم السبت المقبل ان شاء الله.
 تفاصيل اوفى في البوستر المرفق ادناه   </p>
                     </section>
 			 </section>
-                    <section id="tab4" class="inner-vv-wrap">
+                    <section id="tab4" class="vv-sm" >
                         <h3 class="head-vl"> Get In Touch</h3>
                         <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
                     </section>
