--- a/index.html
+++ b/index.html
@@ -81,13 +81,12 @@
 
                     <input id="tab4" type="radio" class="vv-sm" name="tabs">
                     <label for="tab4"> <a href="./Contact.html" class="navbar-link">Contact Us.</a>Contact</label>
-                    <section id="content1" class="inner-vv-wrap">
+                    <section id="tab1" class="inner-vv-wrap">
                         <img src="Photon.jpg" class="admin img-fluid" alt="Photon">
                         <h4>The Photon Scientific Centre for Natural Sciences and Metaphysics</h4>
 			<p>
 	                        <video class="inner-vv-wrap"  controls>
         	                    <source src="video/video.mp4" type="video/mp4">
-                	           About us
                         	</video> 
 			</p>
                       </section>
