--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!--
-    - Title
-  -->
-  <title> The Photon Scientific Centre for Natural Sciences and Metaphysics</title>
-
-  <!-- 
     - css link
   -->
   <link rel="stylesheet" href="./settings/CSS/style.css">
@@ -46,7 +41,7 @@
     <div class="container">
       <!--logo-->
       <h1 class="logo">
-        <a href="#">Photon<span>.</span></a>
+        <a href="#">The Photon Scientific Centre for Natural Sciences and Metaphysics<span>.</span></a>
       </h1>
 
       <!--menu-->
