--- a/index.html
+++ b/index.html
@@ -44,12 +44,6 @@
         <a href="#">The Photon Scientific Centre for Natural Sciences and Metaphysics<span>.</span></a>
       </h1>
 
-      <!--menu-->
-      <button class="nav-btn" aria-label="Toggle Menu" title="Toggle Menu" data-btn>
-        <span class="one"></span>
-        <span class="two"></span>
-        <span class="three"></span>
-      </button>
   <!--
     - Js link
   -->
@@ -86,7 +80,7 @@
 			</p>
                       </section>
                     <section id="tab1" class="vv-sm" >
-                        <h3 class="head-vl">About us</h3>
+                        <h3 class="head-vl">Home</h3>
                         <div style="text-align: justify">
                             <p>Exploring Science & Metaphysics. Bridging Experts & Enthusiasts.    </p>
 			</div>
