--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			     </section>
                     <section id="tab2" class="vv-sm" >
                         <h3 class="head-vl">About us</h3>
-                        <p><strong>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics!** <p>
+                        <p>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics!** <p>
 				<p><strong>**مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا!** <p>
 				<p>Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
 				Our mission is to bridge the gap between experts in these fields, passionate individuals, and aspiring students. Through a diverse range of activities and specialized training courses, we aim to facilitate knowledge sharing, ignite curiosity, and inspire the next generation of scientific pioneers.
