--- a/index.html
+++ b/index.html
@@ -50,11 +50,6 @@
   <script src="./settings/JS/script.js"></script>
 </body>
 	 <!-- main-content -->
-    <div class="main-banner" id="home">
-            </div>
-            <div class="middile-inner-con">
-                <div class="tab-main mx-auto">
-
                     <input id="tab1" type="radio" name="tabs" class="vv-sm" checked>
                     <label for="tab1"><a href="./index.html" class="navbar-link">Home.</label>
 
@@ -74,24 +69,24 @@
                         	</video> 
 			</p>
                       </section>
-                    <section id="tab1" class="vv-sm" >
+                    <section id="tab1" class="inner-vv-wrap" >
                         <h3 class="head-vl">Home</h3>
                         <div style="text-align: justify">
                             <p>Exploring Science & Metaphysics. Bridging Experts & Enthusiasts.<p>
 			</div>
 			     </section>
-                    <section id="tab2" class="vv-sm" >
+                    <section id="tab2" class="inner-vv-wrap" >
                         <h3 class="head-vl">About us</h3>
                         <p> Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics <p>
 				<p>مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا<p>
 				<p>Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
 				Our mission is to bridge the gap between experts in these fields, passionate individuals, and aspiring students. Through a diverse range of activities and specialized training courses, we aim to facilitate knowledge sharing, ignite curiosity, and inspire the next generation of scientific pioneers.
 				Join us on this fascinating journey of discovery, exploration, and enlightenment. Together, we can unravel the mysteries of the cosmos and expand the horizons of human understanding.
-				Stay connected and informed by following our page!><p>
+	<p>
                       
                     </section>
 			 </section>
-                    <section id="tab3" class="vv-sm" >
+                    <section id="tab3" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Upcoming events</h3>
                         <p>محاضرة رقم (7)
 لا يخفى على الجميع أهمية القياس و المعايرة في حياتنا اليومية، فضلاً عن أهمية القياس في مجال العلوم الطبيعية، سواءً كان على المستوى المجهري او الأشياء المنظورة بالعين المجردة.
@@ -99,7 +94,7 @@
 تفاصيل اوفى في البوستر المرفق ادناه   </p>
                     </section>
 			 </section>
-                    <section id="tab4" class="vv-sm" >
+                    <section id="tab4" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Get In Touch</h3>
                         <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
                     </section>
