--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <script src="./settings/JS/script.js"></script>
 </body>
 	 <!-- main-content -->
-                    <input id="tab1" type="radio" name="tabs" class="vv-sm" checked>
+                    <input id="tab1" type="radio" name="tabs" class="vv-sm" >
                     <label for="tab1"><a href="./index.html" class="navbar-link">Home.</label>
 
                     <input id="tab2" type="radio" class="vv-sm" name="tabs">
@@ -77,9 +77,10 @@
 			     </section>
                     <section id="tab2" class="inner-vv-wrap" >
                         <h3 class="head-vl">About us</h3>
-                        <p> Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics <p>
-				<p>مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا<p>
-				<p>Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
+			    <div style="text-align: justify">
+                        <p> Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics
+				مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا
+				Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
 				Our mission is to bridge the gap between experts in these fields, passionate individuals, and aspiring students. Through a diverse range of activities and specialized training courses, we aim to facilitate knowledge sharing, ignite curiosity, and inspire the next generation of scientific pioneers.
 				Join us on this fascinating journey of discovery, exploration, and enlightenment. Together, we can unravel the mysteries of the cosmos and expand the horizons of human understanding.
 	<p>
