--- a/index.html
+++ b/index.html
@@ -68,12 +68,19 @@
         	                    <source src="video/video.mp4" type="video/mp4">
                         	</video> 
 			</p>
+			      </div>
+                        </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
                       </section>
                     <section id="tab1" class="inner-vv-wrap" >
                         <h3 class="head-vl">Home</h3>
                         <div style="text-align: justify">
                             <p>Exploring Science & Metaphysics. Bridging Experts & Enthusiasts.<p>
 			</div>
+                        </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
 			     </section>
                     <section id="tab2" class="inner-vv-wrap" >
                         <h3 class="head-vl">About us</h3>
@@ -83,7 +90,11 @@
 				Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
 				Our mission is to bridge the gap between experts in these fields, passionate individuals, and aspiring students. Through a diverse range of activities and specialized training courses, we aim to facilitate knowledge sharing, ignite curiosity, and inspire the next generation of scientific pioneers.
 				Join us on this fascinating journey of discovery, exploration, and enlightenment. Together, we can unravel the mysteries of the cosmos and expand the horizons of human understanding.
-	<p>
+			    </p>
+				      </div>
+                        </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
                       
                     </section>
 			 </section>
@@ -93,12 +104,24 @@
 لا يخفى على الجميع أهمية القياس و المعايرة في حياتنا اليومية، فضلاً عن أهمية القياس في مجال العلوم الطبيعية، سواءً كان على المستوى المجهري او الأشياء المنظورة بالعين المجردة.
 سنكون على موعد مع إحدى الخبيرات في مجال الميترولوجي لإستكشاف علم القياس في محاضرة عامة يوم السبت المقبل ان شاء الله.
 تفاصيل اوفى في البوستر المرفق ادناه   </p>
+			      </div>
+                        </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
                     </section>
 			 </section>
                     <section id="tab4" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Get In Touch</h3>
                         <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
                     </section>
+				
+	     </div>
+        <div class="copy-vv-right text-center pb-3">
+            <p>© 2023 Photon SCNSM. All rights reserved.
+            </p>
+
+        </div>
+    </div>
 
 <main>
 </main>
