--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     <section id="tab4" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Get In Touch</h3>
                         <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
+			<p><strong> Facebook</strong> <a href="https://www.facebook.com/Photon.SCNS">Photon SCNSM</a></p>
                     </section>
 				
 	     </div>
