--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                         	</video> 
 			</p>
 			      </div>
+	     </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
                       
                       </section>
                     <section id="tab1" class="inner-vv-wrap" >
@@ -76,7 +79,9 @@
                         <div style="text-align: justify">
                             <p>Exploring Science & Metaphysics. Bridging Experts & Enthusiasts.</p>
 			</div>
-                      
+                         </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
 			     </section>
                     <section id="tab2" class="inner-vv-wrap" >
                         <h3 class="head-vl">About us</h3>
