--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <label for="tab2"> <a href="./about.html" class="navbar-link">About us.</label>
 
                     <input id="tab3" type="radio" class="vv-sm" name="tabs">
-                    <label for="tab3"><a href="./up coming.html" class="navbar-link">Up-coming Events.</label>
+                    <label for="tab3"><a href="./up coming.html" class="navbar-link">Past and Up-coming Events.</label>
 
                     <input id="tab4" type="radio" class="vv-sm" name="tabs">
                     <label for="tab4"> <a href="./Contact.html" class="navbar-link">Contact Us.</label>
