--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div>
 			     </section>
                     <section id="tab2" class="inner-vv-wrap" >
-                        <h3 class="head-vl">About us</h3>
+                        <h3 class="head-vl">Vision and Mission</h3>
 			    <div style="text-align: justify">
                         <p> Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics  </p>
 				 <p> مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا </p>
@@ -100,7 +100,7 @@
                     </section>
 			 </section>
                     <section id="tab3" class="inner-vv-wrap" >
-                        <h3 class="head-vl"> Upcoming events</h3>
+                        <h3 class="head-vl"> Past and Upcoming events</h3>
                         <p>محاضرة رقم (7)
 لا يخفى على الجميع أهمية القياس و المعايرة في حياتنا اليومية، فضلاً عن أهمية القياس في مجال العلوم الطبيعية، سواءً كان على المستوى المجهري او الأشياء المنظورة بالعين المجردة.
 سنكون على موعد مع إحدى الخبيرات في مجال الميترولوجي لإستكشاف علم القياس في محاضرة عامة يوم السبت المقبل ان شاء الله.
@@ -112,7 +112,7 @@
                     </section>
 			 </section>
                     <section id="tab4" class="inner-vv-wrap" >
-                        <h3 class="head-vl"> Get In Touch</h3>
+                        <h3 class="head-vl"> How to find us</h3>
                         <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
 			<p><strong> Facebook</strong> <a href="https://www.facebook.com/Photon.SCNS">Photon SCNSM</a></p>
                     </section>
