--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     <div class="container">
       <!--logo-->
       <h1 class="logo">
-        <a href="#">The Photon Scientific Centre for Natural Sciences and Metaphysics<span>.</span></a>
+        <a href="#">The Photon Scientific Centre for Natural Sciences and Metaphysics<span></span></a>
+	      
+        <a href="#">مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا<span></span></a>
+	      
       </h1>
 
   <script src="./settings/JS/script.js"></script>
