--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <div class="container">
       <!--logo-->
       <h1 class="logo">
-        <a href="#">The Photon Scientific Centre for Natural Sciences and Metaphysics<span></span></a>
+        <p>The Photon Scientific Centre for Natural Sciences and Metaphysics<span></span></p>
 	      
-        <a href="#">مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا<span></span></a>
+        <p>مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا<span></span></p>
 	      
       </h1>
 
