--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1 class="logo">
         <p>The Photon Scientific Centre for Natural Sciences and Metaphysics<span></span></p>
 	      
-        <p>ف مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا<span></span></p>
+        <p>مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا<span></span></p>
 	      
       </h1>
 
@@ -59,6 +59,9 @@
 
                     <input id="tab3" type="radio" class="vv-sm" name="tabs">
                     <label for="tab3"><a href="./up coming.html" class="navbar-link">Past and Up-coming Events.</label>
+
+		     <input id="tab4" type="radio" class="vv-sm" name="tabs">
+                    <label for="tab4"> <a href="./Contact.html" class="navbar-link">Servics.</label>
 
                     <input id="tab4" type="radio" class="vv-sm" name="tabs">
                     <label for="tab4"> <a href="./Contact.html" class="navbar-link">Contact Us.</label>
@@ -107,8 +110,13 @@
                         <div style="clear: both; margin-bottom: 32pt"></div>
                         <div>
                     </section>
-			 </section>
+				</section>
                     <section id="tab4" class="inner-vv-wrap" >
+                        <h3 class="head-vl"> Services </h3>
+                        Stuff....
+                    </section>
+			 </section>
+                    <section id="tab5" class="inner-vv-wrap" >
                         <h3 class="head-vl"> How to find us</h3>
                         <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
 			<p><strong> Facebook</strong> <a href="https://www.facebook.com/Photon.SCNSM">Photon SCNSM</a></p>
