--- a/index.html
+++ b/index.html
@@ -2,34 +2,24 @@
 <html lang="en">
 
 <head>
-  <!--
-    - Settings
-  -->
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- //Meta tag Keywords -->
 
-  <!--
-    - css link
-  -->
-  <link rel="stylesheet" href="./settings/CSS/style.css">
-
-  <!--
-    - fav icons
-  -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./settings/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./settings/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./settings/images/favicon-16x16.png">
-  <link rel="manifest" href="./settings/images/site.webmanifest">
-
-  <!-- 
-    - font link
-  -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
-    rel="stylesheet">
+    <!-- Custom-Files -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- Bootstrap-Core-CSS -->
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+    <!-- Style-CSS -->
+    <!-- font-awesome-icons -->
+    <link href="css/font-awesome.css" rel="stylesheet">
+    <!-- //font-awesome-icons -->
+    <!-- /Fonts -->
+    <!--
+    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800" rel="stylesheet">
+    -->
+    <link href="css/source+sans+pro.css" rel="stylesheet">
+    <link href="css/raleway.css" rel="stylesheet">
+    <!-- //Fonts -->
 </head>
 
 
