--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
     <!-- //Fonts -->
 </head>
 
-
 <body class="dark_theme">
+	 <script>
+        addEventListener("load", function() {
+            setTimeout(hideURLbar, 0);
+        }, false);
+
+        function hideURLbar() {
+            window.scrollTo(0, 1);
+        }
+    </script>
+	
   <!--
     header
   -->
