--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!--/banner-->
         <div class="banner-info">
             <div class="lavi-logo text-center">
-                <h1> <a href="index.html">Photon SCNSM</a></h1>
+                <h1> <a href="index.html" style="background-color:powderblue; style="text-align:center;">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
             </div>
             <div class="middile-inner-con">
                 <div class="tab-main mx-auto">
@@ -70,15 +70,9 @@
                     <input id="tab6" type="radio" class="vv-sm" name="tabs">
                     <label for="tab6"><span class="fa fa-envelope" aria-hidden="true"></span> Contact us</label>
                     <section id="content1" class="inner-vv-wrap">
-                        <img src="images/admin.jpg" class="admin img-fluid" alt="mobile-image">
+                        <img src="images/Photon.jpg" class="admin img-fluid" alt="Photon">
                         <h4>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics </h4>
 			<br>
-			<p>My social media</p>
-			<p>
-				<a target="_blank" href="https://twitter.com/AlaaBakhit4" rel="noopener noreferrer"><span class="fa fa-twitter"></span></a>
-				<a target="_blank" href="https://sd.linkedin.com/in/alaa-mohammed-idris-bakhit-3aa46310b" rel="noopener noreferrer"><span class="fa fa-linkedin"></span></a>
-			</p>
-
 			     </section>
                     <section id="tab1" class="inner-vv-wrap">
                         <h3 class="head-vl">Exploring Science & Metaphysics. Bridging Experts & Enthusiasts.</h3>
@@ -87,9 +81,7 @@
                     <section id="tab2" class="inner-vv-wrap" >
                         <h3 class="head-vl">Vision and Mission</h3>
 			    <div style="text-align: justify">
-                        <p> Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics  </p>
-				 <p> مرحبًا بكم في مركز فوتون العلمي للعلوم الطبيعية والميتافيزيقا </p>
-				Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
+                        <p> Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
 				Our mission is to bridge the gap between experts in these fields, passionate individuals, and aspiring students. Through a diverse range of activities and specialized training courses, we aim to facilitate knowledge sharing, ignite curiosity, and inspire the next generation of scientific pioneers.
 				Join us on this fascinating journey of discovery, exploration, and enlightenment. Together, we can unravel the mysteries of the cosmos and expand the horizons of human understanding.
 			    </p>
@@ -119,7 +111,7 @@
 			     <p><strong>Epitaxial growth of (h-BNC) monolayer on different substrate materials</strong></p>
 		    <p><a href="https://tinyurl.com/ypzbkyb2" target="_blank" rel="noopener noreferrer">Alaa Mohammed Idris Bakhit, 11 Nov. 2023</a></p>
 			    <p><strong>Introduction to Metrology: The science of Measurments</strong></p>
-		    <p><a href="https://www.facebook.com/Photon.SCNSM/videos/300665196205179" target="_blank" rel="noopener noreferrer">Alaa Mohammed Idris Bakhit, 11 Nov. 2023</a></p>
+		    <p><a href="https://www.facebook.com/Photon.SCNSM/videos/300665196205179" target="_blank" rel="noopener noreferrer">Dr Tamador Salah, 18 Nov. 2023</a></p>
 		    </section>
 		    
 
@@ -138,7 +130,7 @@
                     <section id="tab5" class="inner-vv-wrap" >
                         <h3 class="head-vl"> How to find us</h3>
                         <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
-			<p><strong> Facebook</strong> <a href="https://www.facebook.com/Photon.SCNSM">Photon SCNSM</a></p>
+			<p><strong></strong> <a href="https://www.facebook.com/Photon.SCNSM">Facebook</a></p>
                     </section>
 				
 	     </div>
