--- a/index.html
+++ b/index.html
@@ -1,53 +1,96 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
 
 <head>
-    <title>Photon SCNSM| Home </title>
-    <!-- Meta tag Keywords -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8" />
-    <meta name="description" content="Photon website" />
-    <meta name="keywords" content="Photon, Sudanese, center physics" />
-    <meta name="author" content="Photon" />
-    <meta name="google-site-verification" content="6JLROd9ArI1rDLhpqYZSyUW4Uyz_6rjNOEaYJRefKCE" />
-    <script>
-        addEventListener("load", function() {
-            setTimeout(hideURLbar, 0);
-        }, false);
+<!--
+    - Settings
+  -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        function hideURLbar() {
-            window.scrollTo(0, 1);
-        }
-    </script>
-    <!-- //Meta tag Keywords -->
+  <!--
+    - Title
+  -->
+  <title>Photon - Sudanese Physics Community</title>
 
-    <!-- Custom-Files -->
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <!-- Bootstrap-Core-CSS -->
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
-    <!-- Style-CSS -->
-    <!-- font-awesome-icons -->
-    <link href="css/font-awesome.css" rel="stylesheet">
-    <!-- //font-awesome-icons -->
-    <!-- /Fonts -->
-    <!--
-    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800" rel="stylesheet">
-    -->
-    <link href="css/source+sans+pro.css" rel="stylesheet">
-    <link href="css/raleway.css" rel="stylesheet">
-    <!-- //Fonts -->
+  <!-- 
+    - css link
+  -->
+  <link rel="stylesheet" href="./settings/CSS/style.css">
 
+  <!--
+    - fav icons
+  -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./settings/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./settings/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./settings/images/favicon-16x16.png">
+  <link rel="manifest" href="./settings/images/site.webmanifest">
+
+  <!-- 
+    - font link
+  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
+    rel="stylesheet">
 </head>
 
-	<body>
+	<body class="dark_theme">
+  <!--
+    header
+  -->
+  <header class="header" data-header>
+    <div class="container">
+      <!--logo-->
+        <h1> <a href="index.html" style="color:MediumSeaGreen;"; style="text-align:center;">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
+   
 
-    <!-- main-content -->
-    <div class="main-banner" id="home">
-        <!--/banner-->
-        <div class="banner-info">
-            <div class="lavi-logo text-center">
-                <h1> <a href="index.html" style="background-color:powderblue; style="text-align:center;">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
+      <!--menu-->
+      <button class="nav-btn" aria-label="Toggle Menu" title="Toggle Menu" data-btn>
+        <span class="one"></span>
+        <span class="two"></span>
+        <span class="three"></span>
+	<span class="four"></span>
+	<span class="five"></span>
+	<span class="six"></span>
+      </button>
+
+	          <!--tabs-->
+      <nav class="navbar" data-navbar>
+        <ul class="navbar-list">
+          <li>
+            <a href="./index.html" class="navbar-link">Home.</a>
+          </li>
+          <li>
+            <a href="./upcoming.html" class="navbar-link">Vision and Mission</a>
+          </li>
+          <li>
+            <a href="./past.html" class="navbar-link">Past and Up-coming Events.</a>
+          </li>
+          <li>
+            <a href="./about.html" class="navbar-link">Services </a>
+          </li>
+		<li>
+            <a href="./team.html" class="navbar-link">Team</a>
+          </li>
+		<li>
+            <a href="./contact.html" class="navbar-link">Contact us</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    </div>
+  </header>
+
+  <!--
+    - Js link
+  -->
+  <script src="./settings/JS/script.js"></script>
+</body>
+
+                
             </div>
             <div class="middile-inner-con">
                 <div class="tab-main mx-auto">
