--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <nav class="navbar" data-navbar>
         <ul class="navbar-list">
           <li>
-            <a href="./index.html" class="navbar-link">Home.</a>
+		   <input id="tab1" type="radio" name="tabs" class="vv-sm" checked>
+                    <label for="tab1"><a href="./index.html" class="navbar-link">Home.</a></label>
+            
           </li>
           <li>
             <a href="./upcoming.html" class="navbar-link">Vision and Mission</a>
@@ -95,8 +97,7 @@
             <div class="middile-inner-con">
                 <div class="tab-main mx-auto">
 
-                    <input id="tab1" type="radio" name="tabs" class="vv-sm" checked>
-                    <label for="tab1"><span class="fa fa-home" aria-hidden="true"></span>Home</label>
+                
 
                     <input id="tab2" type="radio" class="vv-sm" name="tabs">
                     <label for="tab2"><span class="fa fa-user" aria-hidden="true"></span> Vision and Mission </label>
