--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <header class="header" data-header>
     <div class="container">
       <!--logo-->
-        <h1> <a href="index.html" style="color:MediumSeaGreen;"; style="text-align:center;">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
+        <h1> <style="color:MediumSeaGreen;"; style="text-align:center;">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
    
 
       <!--menu-->
@@ -61,7 +61,7 @@
       <nav class="navbar" data-navbar>
         <ul class="navbar-list">
           <li>
-		   <input id="tab1" type="radio" name="tabs" class="vv-sm" checked>
+		   <input id="tab1" type="radio" name="tabs" >
                     <label for="tab1"><a href="./index.html" class="navbar-link">Home.</a></label>
             
           </li>
