--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <nav class="navbar" data-navbar>
         <ul class="navbar-list">
           <li>
-		   <input id="tab1" type="radio" name="tabs" >
+		   <input id="tab1" name="tabs" >
                     <label for="tab1"><a href="./index.html" class="navbar-link">Home.</a></label>
             
           </li>
