--- a/index.html
+++ b/index.html
@@ -45,18 +45,8 @@
     <div class="container">
       <!--logo-->
         <h1> <style="color:MediumSeaGreen;"; style="text-align:center;">The Photon Scientific Centre for Natural Sciences and Metaphysics</a></h1>
-   
 
-      <!--menu-->
-      <button class="nav-btn" aria-label="Toggle Menu" title="Toggle Menu" data-btn>
-        <span class="one"></span>
-        <span class="two"></span>
-        <span class="three"></span>
-	<span class="four"></span>
-	<span class="five"></span>
-	<span class="six"></span>
-      </button>
-
+ <div>
 	          <!--tabs-->
       <nav class="navbar" data-navbar>
         <ul class="navbar-list">
@@ -115,34 +105,42 @@
 		    </section>
                     <section id="tab3" class="inner-vv-wrap">
                         <h3 class="head-vl">Past and Up-coming Events.</h3>
-                        <p><strong>The similarities between gravity and electromagnetic</strong></p>
-                        <p><a href="https://www.facebook.com/Photon.SCNSM/videos/653607096744300" target="_blank" rel="noopener noreferrer"> by Prof Arbab,  16 Sep.2023, nanoscale</a></p>
+                        <p><a href="https://www.facebook.com/Photon.SCNSM/videos/653607096744300" target="_blank" rel="noopener noreferrer">The similarities between gravity and electromagnetic</p>
+                        <p> by Prof Arbab,  16 Sep.2023, nanoscale</a></p>
                         <div style="clear: both; margin-bottom: 12pt"></div>
- 			<p><strong>Unification of gauge coupling constants beyond the standard model.</strong></p>
-                        <p><a href="https://www.facebook.com/61551543201104/videos/844712177286570" target="_blank" rel="noopener noreferrer">by Dr Ammar Ibrahim Abdalgabar, 7 Oct. 2023</a></p>
+ 			<p><a href="https://www.facebook.com/61551543201104/videos/844712177286570" target="_blank" rel="noopener noreferrer">Unification of gauge coupling constants beyond the standard model</p>
+                        <p>by Dr Ammar Ibrahim Abdalgabar, 7 Oct. 2023</a></p>
 			<div style="clear: both; margin-bottom: 12pt"></div>
-			<p><strong>From Pulsars to Swift J1818 Magnetar Outbursts: An Exploration</strong></p>
-     			<p><a href="https://www.facebook.com/61551543201104/videos/886535059510737" target="_blank" rel="noopener noreferrer">Mr Abubakr Y.A Ibrahim, 14 Oct. 2023</a></p>
-                  	<p><strong>Studies of interacting galaxies and the effect of the environment on their evolution </strong></p>
-		    <p><a href="https://tinyurl.com/ad774jwc" target="_blank" rel="noopener noreferrer">Dr Ahmed Elagali, 21 Oct. 2023</a></p>
-			    <p><strong>LTCC-Technology</strong></p>
-		    <p><a href="https://tinyurl.com/ykua3xae" target="_blank" rel="noopener noreferrer">Dr Mohamed Ashari, 28 Oct. 2023</a></p>
-			     <p><strong>Epitaxial growth of (h-BNC) monolayer on different substrate materials</strong></p>
-		    <p><a href="https://tinyurl.com/ypzbkyb2" target="_blank" rel="noopener noreferrer">Alaa Mohammed Idris Bakhit, 11 Nov. 2023</a></p>
-			    <p><strong>Introduction to Metrology: The science of Measurments</strong></p>
-		    <p><a href="https://www.facebook.com/Photon.SCNSM/videos/300665196205179" target="_blank" rel="noopener noreferrer">Dr Tamador Salah, 18 Nov. 2023</a></p>
+			<p><a href="https://www.facebook.com/61551543201104/videos/886535059510737" target="_blank" rel="noopener noreferrer">From Pulsars to Swift J1818 Magnetar Outbursts: An Exploration</p>
+     			<p>by Mr Abubakr Y.A Ibrahim, 14 Oct. 2023</a></p>
+                  	<p><a href="https://tinyurl.com/ad774jwc" target="_blank" rel="noopener noreferrer">Studies of interacting galaxies and the effect of the environment on their evolution</p>
+		    <p>by Dr Ahmed Elagali, 21 Oct. 2023</a></p>
+			    <p><a href="https://tinyurl.com/ykua3xae" target="_blank" rel="noopener noreferrer">LTCC-Technology</p>
+		    <p>by Dr Mohamed Ashari, 28 Oct. 2023</a></p>
+			     <p><a href="https://tinyurl.com/ypzbkyb2" target="_blank" rel="noopener noreferrer">Epitaxial growth of (h-BNC) monolayer on different substrate materials</p>
+		    <p>by Alaa Mohammed Idris Bakhit, 11 Nov. 2023</a></p>
+			    <p><a href="https://www.facebook.com/Photon.SCNSM/videos/300665196205179" target="_blank" rel="noopener noreferrer">Introduction to Metrology: The science of Measurments</p>
+		    <p>by Dr Tamador Salah, 18 Nov. 2023</a></p>
 		    </section>
 		    
-
+ </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
  </section>
-				</section>
+				
                     <section id="tab4" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Services </h3>
                         Stuff....
+		 </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
                     </section>
 			<section id="tab5" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Team </h3>
                         Stuff....
+		 </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
                     </section>
 		
 			 </section>
