--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- 
     - css link
   -->
-  <link rel="stylesheet" href="./settings/CSS/style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!--
     - fav icons
@@ -108,7 +108,7 @@
                     <section id="tab3" class="inner-vv-wrap">
                         <h3 class="head-vl">Past and Up-coming Events.</h3>
                         <p><a href="https://www.facebook.com/Photon.SCNSM/videos/653607096744300" target="_blank" rel="noopener noreferrer">The similarities between gravity and electromagnetic</p>
-                        <p> by Prof Arbab,  16 Sep.2023, nanoscale</a></p>
+                        <p> by Prof Arbab,  16 Sep.2023</a></p>
                         <div style="clear: both; margin-bottom: 12pt"></div>
  			<p><a href="https://www.facebook.com/61551543201104/videos/844712177286570" target="_blank" rel="noopener noreferrer">Unification of gauge coupling constants beyond the standard model</p>
                         <p>by Dr Ammar Ibrahim Abdalgabar, 7 Oct. 2023</a></p>
