--- a/services.html
+++ b/services.html
@@ -37,52 +37,14 @@
     rel="stylesheet">
 </head>
 
-
-<body class="dark_theme">
-  <!--
-    header
-  -->
-  <header class="header" data-header>
-    <div class="container">
-      <!--logo-->
-      <h1 class="logo">
-        <a href="#">Photon<span>.</span></a>
-      </h1>
-
-      <!--menu-->
-      <button class="nav-btn" aria-label="Toggle Menu" title="Toggle Menu" data-btn>
-        <span class="one"></span>
-        <span class="two"></span>
-        <span class="three"></span>
-      </button>
-
-      <!--tabs-->
-      <nav class="navbar" data-navbar>
-        <ul class="navbar-list">
-          <li>
-            <a href="./index.html" class="navbar-link">Home.</a>
-          </li>
-          <li>
-            <a href="./upcoming.html" class="navbar-link">Up-coming Events.</a>
-          </li>
-          <li>
-            <a href="./past.html" class="navbar-link">Archive.</a>
-          </li>
-          <li>
-            <a href="./about.html" class="navbar-link">About Us.</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    </div>
-  </header>
-
-  <!--
-    - Js link
-  -->
-  <script src="./settings/JS/script.js"></script>
 </body>
-
+ <section id="tab4" class="navbar-link" >
+                        <h3 class="head-vl"> Services </h3>
+                        Stuff....
+		 </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
+                    </section>
 
 <main>
 </main>
