--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
       <nav class="navbar" data-navbar>
         <ul class="navbar-list">
           <li>
-                    <label for="tab1"><a href="./index.html" class="navbar-link">Home.</a></label>
+                    <label for="tab1"><a href="./index.html" class="navbar-link">Home</a></label>
             
           </li>
           <li>
              <label for="tab2"><a href="./upcoming.html" class="navbar-link">Vision and Mission</a></label>
           </li>
           <li>
-             <label for="tab3"><a href="./past.html" class="navbar-link">Past and Up-coming Events.</a></label>
+             <label for="tab3"><a href="./past.html" class="navbar-link">Past and Up-coming Events</a></label>
           </li>
           <li>
-            <label for="tab4"><a href="./about.html" class="navbar-link">Services </a></label>
+            <label for="tab4"><a href="./about.html" class="navbar-link">Services</a></label>
 
           </li>
 		<li>
