--- a/team.html
+++ b/team.html
@@ -9,23 +9,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!--
-    - Title
-  -->
-  <title>Photon - Sudanese Physics Community</title>
 
-  <!-- 
-    - css link
-  -->
   <link rel="stylesheet" href="./settings/CSS/style.css">
 
   <!--
     - fav icons
   -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./settings/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./settings/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./settings/images/favicon-16x16.png">
-  <link rel="manifest" href="./settings/images/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
 
   <!-- 
     - font link
@@ -36,10 +29,9 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
     rel="stylesheet">
 </head>
-
 </body>
  </section>
-			<section id="tab5" class="inner-vv-wrap" >
+		<section id="tab5" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Team </h3>
                         Stuff....
 		 </div>
