--- a/upcoming.html
+++ b/upcoming.html
@@ -8,24 +8,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!--
-    - Title
-  -->
-  <title>Photon - Sudanese Physics Community</title>
-
-  <!-- 
-    - css link
-  -->
-  <link rel="stylesheet" href="./settings/CSS/style.css">
+  
+  <link rel="stylesheet" href="style.css">
 
   <!--
     - fav icons
   -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./settings/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./settings/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./settings/images/favicon-16x16.png">
-  <link rel="manifest" href="./settings/images/site.webmanifest">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
 
   <!-- 
     - font link
@@ -37,51 +29,29 @@
     rel="stylesheet">
 </head>
 
-
-<body class="dark_theme">
-  <!--
-    header
-  -->
-  <header class="header" data-header>
-    <div class="container">
-      <!--logo-->
-      <h1 class="logo">
-        <a href="#">Photon<span>.</span></a>
-      </h1>
-
-      <!--menu-->
-      <button class="nav-btn" aria-label="Toggle Menu" title="Toggle Menu" data-btn>
-        <span class="one"></span>
-        <span class="two"></span>
-        <span class="three"></span>
-      </button>
-
-      <!--tabs-->
-      <nav class="navbar" data-navbar>
-        <ul class="navbar-list">
-          <li>
-            <a href="./index.html" class="navbar-link">Home.</a>
-          </li>
-          <li>
-            <a href="./upcoming.html" class="navbar-link">Up-coming Events.</a>
-          </li>
-          <li>
-            <a href="./past.html" class="navbar-link">Archive.</a>
-          </li>
-          <li>
-            <a href="./about.html" class="navbar-link">About Us.</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    </div>
-  </header>
-
-  <!--
-    - Js link
-  -->
-  <script src="./settings/JS/script.js"></script>
+   
+     
 </body>
+
+                    <section id="tab3" class="inner-vv-wrap">
+                        <h3 class="head-vl">Past and Up-coming Events</h3>
+                        <p><a href="https://www.facebook.com/Photon.SCNSM/videos/653607096744300" target="_blank" rel="noopener noreferrer">The similarities between gravity and electromagnetic</p>
+                        <p> by Prof Arbab,  16 Sep.2023</a></p>
+                        <div style="clear: both; margin-bottom: 12pt"></div>
+ 			<p><a href="https://www.facebook.com/61551543201104/videos/844712177286570" target="_blank" rel="noopener noreferrer">Unification of gauge coupling constants beyond the standard model</p>
+                        <p>by Dr Ammar Ibrahim Abdalgabar, 7 Oct. 2023</a></p>
+			<div style="clear: both; margin-bottom: 12pt"></div>
+			<p><a href="https://www.facebook.com/61551543201104/videos/886535059510737" target="_blank" rel="noopener noreferrer">From Pulsars to Swift J1818 Magnetar Outbursts: An Exploration</p>
+     			<p>by Mr Abubakr Y.A Ibrahim, 14 Oct. 2023</a></p>
+                  	<p><a href="https://tinyurl.com/ad774jwc" target="_blank" rel="noopener noreferrer">Studies of interacting galaxies and the effect of the environment on their evolution</p>
+		    <p>by Dr Ahmed Elagali, 21 Oct. 2023</a></p>
+			    <p><a href="https://tinyurl.com/ykua3xae" target="_blank" rel="noopener noreferrer">LTCC-Technology</p>
+		    <p>by Dr Mohamed Ashari, 28 Oct. 2023</a></p>
+			     <p><a href="https://tinyurl.com/ypzbkyb2" target="_blank" rel="noopener noreferrer">Epitaxial growth of (h-BNC) monolayer on different substrate materials</p>
+		    <p>by Alaa Mohammed Idris Bakhit, 11 Nov. 2023</a></p>
+			    <p><a href="https://www.facebook.com/Photon.SCNSM/videos/300665196205179" target="_blank" rel="noopener noreferrer">Introduction to Metrology: The science of Measurments</p>
+		    <p>by Dr Tamador Salah, 18 Nov. 2023</a></p>
+		    </section>
 
 
 <main>
