--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
 </head>
 
 </body>
+	  </section>
  <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
 			<p> <a href="https://www.facebook.com/Photon.SCNSM">Facebook</a></p>
                     </section>
