--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <main>
 </main>
 		<section id="tab1" class="inner-vv-wrap">
-                        <img src="Photon.jpg" class="admin img-fluid" alt="Photon">
+                        <img src="Photon.jpg" class="img.admin" alt="Photon">
                         <h4>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics </h4>
 			<br>
 			     </section>
