--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
 </head>
 
 </body>
- <section id="tab4" class="navbar-link" >
+ <section id="tab4" class="navbar" >
                         <h3 class="head-vl"> Services </h3>
                         Stuff....
 		 </div>
