--- a/vision.html
+++ b/vision.html
@@ -32,7 +32,7 @@
 
 </body>
 </section>
-                    <section id="tab2" class="navbar-link" >
+                    <section id="tab2" class=".inner-vv-wrap" >
                         <h3 class="head-vl">Vision and Mission</h3>
 			    <div style="text-align: justify">
                         <p> Our vision is to foster a deep appreciation for natural sciences, with a particular focus on physics, astronomy, and their transcendent aspects. We're here to illuminate the wonders of the universe and explore the metaphysical frontiers of knowledge.
