--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@
 </head>
 </body>
  </section>
-		<section id="tab5" class="navbar-link" >
+		<section id="tab5" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Team </h3>
                         Stuff....
 		 </div>
