--- a/index.html
+++ b/index.html
@@ -89,5 +89,12 @@
                         <img src="Photon.jpg" class="img.admin" alt="Photon">
                         <h4>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics </h4>
 			     </section>
+			     </div>
+        <div class="copy-vv-right text-center pb-3">
+            <p>© 2023 Photon SCNSM. All rights reserved.
+            </p>
+
+        </div>
+    </div>
 
 </html>
