--- a/team.html
+++ b/team.html
@@ -33,7 +33,75 @@
  </section>
 		<section id="tab5" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Team </h3>
-                        Stuff....
+                       <div class="row">
+		<div class="col-md-12 portfolio-item">
+			<h2>Core Team</h2>
+		</div>
+	</div>
+	<div class="row">
+        <div class="indent1">
+		<div class="col-md-6 portfolio-item team-class">
+				</h3> <img src="person.png" class="admin img-fluid" alt="Photon">Dr Elbasher M. E. Ahmed</h3>
+			<p>Founder and director</p>
+			<p><strong> e-mail:</strong> <a href="elbasher@aims.ac.za">elbasher@aims.ac.za</a></p>
+		</div>
+		<div class="col-md-6 portfolio-item team-class">
+ 			<a>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Abubkr Yagoub</h3>
+				<p>General manager</p>
+				<p><strong> e-mail:</strong> <a href="abubakryagob@gmail.com">abubakryagob@gmail.com</a></p>
+			</a>
+			<h3>
+				 </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
+						<div class="col-md-6 portfolio-item team-class">
+ 			<a>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Alaa Mohammed Idris</h3>
+				<p>Academic coordinator</p>
+				<p><strong> e-mail:</strong> <a href="alaa.mohamed@aims-cameroon.org">alaa.mohamed@aims-cameroon.org</a></p>
+			</a>
+			<h3>
+				 </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
+				<div class="col-md-6 portfolio-item team-class">
+ 			<a>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Ebtihal Seraj </h3>
+				<p>Communication</p>
+			</a>
+			<h3>
+				 </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
+					<div class="col-md-6 portfolio-item team-class">
+ 			<a>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Maha Mohamed</h3>
+				<p>Services consultant</p>
+				<p><strong> e-mail:</strong> <a href="maha.osman.mohamed@gmail.com">maha.osman.mohamed@gmail.com</a></p>
+			</a>
+			<h3>
+				 </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
+						<div class="col-md-6 portfolio-item team-class">
+ 			<a>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Migdad Yahya</h3>
+				<p>Media assistant </p>
+			</a>
+			<h3>
+				 </div>
+                        <div style="clear: both; margin-bottom: 32pt"></div>
+                        <div>
+							<div class="col-md-6 portfolio-item team-class">
+ 			<a>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Gotyba Mohamed</h3>
+				<p>Student activities </p>
+			</a>
+			<h3>
+		
+	</div>
+	</div>
 		 </div>
                         <div style="clear: both; margin-bottom: 32pt"></div>
                         <div>
