--- a/team.html
+++ b/team.html
@@ -35,29 +35,33 @@
                         <h3 class="head-vl"> Team </h3>
                        <div class="row">
 		<div class="col-md-12 portfolio-item">
-			<h2>Core Team</h2>
 		</div>
 	</div>
 	<div class="row">
         <div class="indent1">
 		<div class="col-md-6 portfolio-item team-class">
 				</h3> <img src="person.png" class="admin img-fluid" alt="Photon">Dr Elbasher M. E. Ahmed</h3>
+			<p>Dr Elbasher M. E. Ahmed</p>
 			<p>Founder and director</p>
 			<p><strong> e-mail:</strong> <a href="elbasher@aims.ac.za">elbasher@aims.ac.za</a></p>
 		</div>
+		 <div style="clear: both; margin-bottom: 32pt"></div>
 		<div class="col-md-6 portfolio-item team-class">
  			<a>
-				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Abubkr Yagoub</h3>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
+				<p>Abubkr Yagoub</p>
 				<p>General manager</p>
 				<p><strong> e-mail:</strong> <a href="abubakryagob@gmail.com">abubakryagob@gmail.com</a></p>
 			</a>
 			<h3>
 				 </div>
+		 
                         <div style="clear: both; margin-bottom: 32pt"></div>
                         <div>
 						<div class="col-md-6 portfolio-item team-class">
  			<a>
-				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Alaa Mohammed Idris</h3>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
+				<p>Alaa Mohammed Idris</p>
 				<p>Academic coordinator</p>
 				<p><strong> e-mail:</strong> <a href="alaa.mohamed@aims-cameroon.org">alaa.mohamed@aims-cameroon.org</a></p>
 			</a>
@@ -67,7 +71,8 @@
                         <div>
 				<div class="col-md-6 portfolio-item team-class">
  			<a>
-				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Ebtihal Seraj </h3>
+				</h3><img src="person.png" class="admin img-fluid" alt="Photon"> </h3>
+				<p>Ebtihal Seraj</p>
 				<p>Communication</p>
 			</a>
 			<h3>
@@ -77,6 +82,7 @@
 					<div class="col-md-6 portfolio-item team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Maha Mohamed</h3>
+				<p>Maha Mohamed</p>
 				<p>Services consultant</p>
 				<p><strong> e-mail:</strong> <a href="maha.osman.mohamed@gmail.com">maha.osman.mohamed@gmail.com</a></p>
 			</a>
@@ -87,6 +93,7 @@
 						<div class="col-md-6 portfolio-item team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Migdad Yahya</h3>
+				<p>Migdad Yahya</p>
 				<p>Media assistant </p>
 			</a>
 			<h3>
@@ -96,6 +103,7 @@
 							<div class="col-md-6 portfolio-item team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon">Gotyba Mohamed</h3>
+				<p>Gotyba Mohamed</p>
 				<p>Student activities </p>
 			</a>
 			<h3>
