--- a/team.html
+++ b/team.html
@@ -45,7 +45,7 @@
 			<p>Founder and director</p>
 			<p><strong> e-mail:</strong> <a href="elbasher@aims.ac.za">elbasher@aims.ac.za</a></p>
 		</div>
-		 <div style="clear: both; margin-bottom: 50pt"></div>
+		          <div style="clear: both; margin-bottom: 50pt; text-align:left"></div>
 		<div class="col-md-6 portfolio-item team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
@@ -77,7 +77,7 @@
 			</a>
 			<h3>
 				 </div>
-                        <div style="clear: both; margin-bottom: 50pt"></div>
+                                <div style="clear: both; margin-bottom: 50pt; text-align:left"></div>
                         <div>
 					<div class="col-md-6 portfolio-item team-class">
  			<a>
