--- a/services.html
+++ b/services.html
@@ -28,9 +28,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Roboto:wght@400;700&family=Saira+Stencil+One&display=swap"
     rel="stylesheet">
-</head>
 
 </body>
+	</section>
  <section id="tab4" class="inner-vv-wrap" >
                         <h3 class="head-vl"> Services </h3>
                         Stuff....
