--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
 </body>
 	 </section>
 	  <section id="tab5" class="inner-vv-wrap" >
+		   <h3 class="head-vl"> How to find us</h3>
  <p><strong> e-mail:</strong> <a href="mailto:info3photon@gmail.com">info3photon@gmail.com</a></p>
 			<p> <a href="https://www.facebook.com/Photon.SCNSM">Facebook</a></p>
                     </section>
