--- a/team.html
+++ b/team.html
@@ -39,14 +39,14 @@
 	</div>
 	<div class="row">
         <div class="indent1">
-		<div class="col-md-6 portfolio-item team-class">
+		<div class="portfolio-item; team-class">
 				</h3> <img src="person.png" class="admin img-fluid" alt="Photon"></h3>
 			<p>Dr Elbasher M. E. Ahmed</p>
 			<p>Founder and director</p>
 			<p><strong> e-mail:</strong> <a href="elbasher@aims.ac.za">elbasher@aims.ac.za</a></p>
 		</div>
-		          <div style="clear: both; margin-bottom: 50pt; text-align:left"></div>
-		<div class="col-md-6 portfolio-item team-class">
+		          <div style="clear: both; margin-bottom: 100pt; text-align:left"></div>
+		<div class="portfolio-item; team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
 				<p>Abubkr Yagoub</p>
@@ -56,9 +56,9 @@
 			<h3>
 				 </div>
 		 
-                        <div style="clear: both; margin-bottom: 50pt"></div>
+                        <div style="clear: both; margin-bottom: 100pt"></div>
                         <div>
-						<div class="col-md-6 portfolio-item team-class">
+						<div class="portfolio-item; team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
 				<p>Alaa Mohammed Idris</p>
@@ -67,9 +67,9 @@
 			</a>
 			<h3>
 				 </div>
-                        <div style="clear: both; margin-bottom: 50pt"></div>
+                        <div style="clear: both; margin-bottom: 100pt"></div>
                         <div>
-				<div class="col-md-6 portfolio-item team-class">
+				<div class="portfolio-item; team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon"> </h3>
 				<p>Ebtihal Seraj</p>
@@ -77,9 +77,9 @@
 			</a>
 			<h3>
 				 </div>
-                                <div style="clear: both; margin-bottom: 50pt; text-align:left"></div>
+                                <div style="clear: both; margin-bottom: 100pt; text-align:left"></div>
                         <div>
-					<div class="col-md-6 portfolio-item team-class">
+					<div class="portfolio-item; team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
 				<p>Maha Mohamed</p>
@@ -88,9 +88,9 @@
 			</a>
 			<h3>
 				 </div>
-                        <div style="clear: both; margin-bottom: 50pt"></div>
+                        <div style="clear: both; margin-bottom: 100pt"></div>
                         <div>
-						<div class="col-md-6 portfolio-item team-class">
+						<div class="portfolio-item; team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
 				<p>Migdad Yahya</p>
@@ -98,9 +98,9 @@
 			</a>
 			<h3>
 				 </div>
-                        <div style="clear: both; margin-bottom: 50pt"></div>
+                        <div style="clear: both; margin-bottom: 100pt"></div>
                         <div>
-							<div class="col-md-6 portfolio-item team-class">
+							<div class="portfolio-item; team-class">
  			<a>
 				</h3><img src="person.png" class="admin img-fluid" alt="Photon"></h3>
 				<p>Gotyba Mohamed</p>
