--- a/index.html
+++ b/index.html
@@ -87,10 +87,13 @@
 <main>
 </main>
 		<section id="tab1" class="inner-vv-wrap">
-		<div style="clear: both; margin-bottom: 50pt"></div>
+		<div style="clear: both; margin-bottom: 100pt; team-class"></div>
+		 <h4>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics </h4>
+		
+		<div style="clear: both; margin-bottom: 100pt"></div>
 		<img src="Photon.jpg" class="img.admin; team class" alt="Photon">
-		 <div style="clear: both; margin-bottom: 100pt"></div>
-                        <h4>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics </h4>
+		 
+                       
 			     </section>
 			     </div>
         <div class="copy-vv-right text-center pb-3">
