--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 <main>
 </main>
 		<section id="tab1" class="inner-vv-wrap">
-		<div style="clear: both; margin-bottom: 100pt; team-class"></div>
-		 <h4>Welcome to the Photon Scientific Centre for Natural Sciences and Metaphysics </h4>
+		<div style="clear: both; margin-bottom: 70pt; team-class"></div>
+		 <h4>Welcome </h4>
 		
 		<div style="clear: both; margin-bottom: 100pt"></div>
 		<img src="Photon.jpg" class="img.admin; team class" alt="Photon">
